--- a/01_document/01_introduccion/cap-introduccion.tex
+++ b/01_document/01_introduccion/cap-introduccion.tex
@@ -1,29 +1,30 @@
-\chapter{Introducción}
-Por distintas razones, los datos recabados en una investigación de índole estadística carecen de precisión: existen discrepancias entre el valor real del objeto de medición y el valor obtenido. Este proceso puede ser sistémico: durante la administración de cuestionarios a una población objetivo, el encuestado puede omitir, rehúsar o incluso responder incorrectamente preguntas embarazosas o invasivas. Este dilema es conocido entre los encuestadores: sus encuestados, si bien están dispuestos a ofrecer la mejor ayuda posible, no están dispuestos a ofrecer información que posteriormente les pueda comprometer. Para obtener dichos datos, el encuestador usa todo su ingenio para equilibrar la privacidad del encuestado y los objetivos de su investigación. En un esfuerzo de aminorar el estrés del encuestado, el encuestador puede censurar los datos con el fin de obtener una respuesta.
-Dichos datos censurados han sido estudiados previamente en la literatura académica. Formalmente, y siguiendo las ideas plasmadas por \cite{peto:p}, una variable $C$ se le denota censurada cuando su valor $c$ no es del todo observable y la única información sobre la misma es un intervalo no-cero $I$. Esta construcción permite definir tres tipos de datos censurados: datos censurados \textit{hacia la izquierda} (en dónde el intervalo $I$ se define de la forma $[-\infty,L_i]$), datos censurados \textit{intervalares} (definido de la forma $[L_i, L_f]; L_i < L_f$), datos censurados \textit{hacia la derecha} (definido de la forma $[L_f, \infty]$). Este tipo de datos naturalmente generan retos en el proceso de modelamiento, pues los modelos estándares de regresión presumen que la variable respuesta es directamente observable.
-Situaciones como la precisada en el parráfo precedente han sido exploradas previamente: desde la determinación de la verosimilitud, la elaboración de modelos de regresión y su estimación bajo inferencia clásica y bayesiana. \cite{gentleman:lmk} identificaron un método de máxima verosimilitud para este tipo de datos, asegurando su consistencia estadística e identificando métodos algorítmicos para su cómputo. Utilizado los puntos extremos del intervalo, $L_i$ y $L_f$, era posible identificar la máxima verosímilitud a través de la diferencia de las funciones de distribución acumulada en dichos puntos. Tomando en consideración dicho método de estimación, distintos autores propusieron modelos de regresión paramétricos bajo inferencia clásica y bayesiana, tales como \cite{mun:xu}, quienes identificaron modelos paramétricos de supervivencia para este tipo de datos.
-Cabe resaltar que los modelos anteriormente expuestos identifican el valor esperado de la variable respuesta condicionada por un conjunto de variables. Sin embargo, el interés del investigador puede recaer en otro objetivo: más allá de la respuesta media, el investigador busca los factores subyacentes que impactan a distintos cuantiles de la variable respuesta. Los factores relacionados a una persona con un gran sueldo son distintos a una persona que no percibe mucho. Para estudios de dicho corte, los modelos de regresión cuantílica brinda la flexibilidad requerida. Dicho modelo fue propuesto inicialmente por Koenker y Basset (1978) quienes, ante la situación en dónde la estimación de mínimos cuadrados es deficiente en modelos con errores no gaussianos, proponen una regresión de cuantiles que permiten modelar libremente los cuantiles de la variable respuesta en relación a las covariables.
+\chapter{IntroducciÃ³n}
+Por distintas razones, los datos recabados en una investigaciÃ³n de Ã­ndole estadÃ­stica carecen de precisiÃ³n: existen discrepancias entre el valor real del objeto de mediciÃ³n y el valor obtenido. Este proceso puede ser sistÃ©mico: durante la administraciÃ³n de cuestionarios a una poblaciÃ³n objetivo, el encuestado puede omitir, rehÃºsar o incluso responder incorrectamente preguntas embarazosas o invasivas. Este dilema es conocido entre los encuestadores: sus encuestados, si bien estÃ¡n dispuestos a ofrecer la mejor ayuda posible, no estÃ¡n dispuestos a ofrecer informaciÃ³n que posteriormente les pueda comprometer. Para obtener dichos datos, el encuestador usa todo su ingenio para equilibrar la privacidad del encuestado y los objetivos de su investigaciÃ³n. En un esfuerzo de aminorar el estrÃ©s del encuestado, el encuestador puede censurar los datos con el fin de obtener una respuesta.
 
-\textbf{Pendiente: Texto explicando los estudios de regresión cuantílica con censura intervalar}
+Dicho tipo de datos se les denomina \textit{datos censurados}, y han sido estudiados previamente en la literatura acadÃ©mica. Formalmente, y siguiendo las ideas plasmadas por \cite{peto:p}, una variable $C$ se le denota censurada cuando su valor $c$ no es del todo observable y la Ãºnica informaciÃ³n sobre la misma es un intervalo no-cero $I$. Esta construcciÃ³n permite definir tres tipos de datos censurados: datos censurados \textit{hacia la izquierda} (en dÃ³nde el intervalo $I$ se define de la forma $[-\infty,L_i]$), datos censurados \textit{intervalares} (definido de la forma $[L_i, L_f]; L_i < L_f$), datos censurados \textit{hacia la derecha} (definido de la forma $[L_f, \infty]$). 
 
-La presente tesis propone utilizar los temas y modelos anteriormente expuestos para implementar un modelo paramétrico de regresión cuantílica aplicado a datos con censura intervalar. Para efectos de la aplicación, los datos se modelarán bajo una distribución Weibull, la cual es de amplia aplicabilidad y permite modelar colas pesadas. Con el propósito de implementar la regresión cuantílica y, atendiendo a la estructura de los datos, dicha distribución será reparametrizada. Finalmente, el método de estimación será el de máxima verosimilitud, siguiendo el marco de la inferencia clásica.
+Este tipo de datos naturalmente generan retos en el proceso de modelamiento, pues los modelos estÃ¡ndares de regresiÃ³n presumen que la variable respuesta es directamente observable. Situaciones como la precisada en el parrÃ¡fo precedente han sido exploradas previamente: desde la determinaciÃ³n de la verosimilitud, la elaboraciÃ³n de modelos de regresiÃ³n y su estimaciÃ³n bajo inferencia clÃ¡sica y bayesiana. \cite{gentleman:lmk} identificaron un mÃ©todo de mÃ¡xima verosimilitud para este tipo de datos, asegurando su consistencia estadÃ­stica e identificando mÃ©todos algorÃ­tmicos para su cÃ³mputo. Utilizado los puntos extremos del intervalo, $L_i$ y $L_f$, era posible identificar la mÃ¡xima verosÃ­militud a travÃ©s de la diferencia de las funciones de distribuciÃ³n acumulada en dichos puntos. Tomando en consideraciÃ³n dicho mÃ©todo de estimaciÃ³n distintos autores propusieron modelos de regresiÃ³n paramÃ©tricos bajo inferencia clÃ¡sica y bayesiana, tales como \cite{mun:xu}, quienes identificaron modelos paramÃ©tricos de supervivencia para este tipo de datos.
+
+Los modelos anteriormente expuestos tienen como propÃ³sito modelar el valor esperado due la variable respuesta condicionada por un conjunto de variables, no obstante el investigador puede tener como objetivo identificar los factores subyacentes que impactan a distintos cuantiles de la variable respuesta. Por ejemplo, los factores (y el efecto de los mismos) que modelen a una persona con un gran sueldo pueden ser muy distintos a una persona con un sueldo promedio o bajo. Bajo este contexto, \cite{koenker:kk} propuso un modelo que extiende esta idea a la estimaciÃ³n de modelos en los que los cuantiles de la distribuciÃ³n condicional de la variable respuesta son expresadas como funciones de un conjunto de covariables (\cite{koenker:2001}). Posteriormente, \cite{zhou:x} propone un mÃ©todo de estimaciÃ³n para datos con censura intervalar y establece las propiedades asintÃ³ticas de los estimadores.
+
+La presente tesis propone utilizar los temas y modelos anteriormente expuestos para implementar un modelo paramÃ©trico de regresiÃ³n cuantÃ­lica aplicado a datos con censura intervalar. Para efectos de la aplicaciÃ³n, los datos se modelarÃ¡n bajo una distribuciÃ³n Weibull, la cual es de amplia aplicabilidad y permite modelar colas pesadas. Con el propÃ³sito de implementar la regresiÃ³n cuantÃ­lica y, atendiendo a la estructura de los datos, dicha distribuciÃ³n serÃ¡ reparametrizada. Finalmente, el mÃ©todo de estimaciÃ³n serÃ¡ el de mÃ¡xima verosimilitud, siguiendo el marco de la inferencia clÃ¡sica.
 
 \section{Objetivos}
-El objetivo de la tesis consiste en proponer un método de regresión cuántiliza adaptado a datos con censura intervalar. Para identificar que el modelo propuesto es adecuado, aplicaremos la regresión en dos conjuntos de datos: uno simulado y otro real. La base de datos a utilizar será la Encuesta Nacional de Satisfacción de Usuarios en Salud elaborada por el Instituto Nacional de Estadística e Informática el año 2015. Los objetivos específicos de la tesis son los siguientes:
+El objetivo de la tesis consiste en proponer un modelo de regresiÃ³n cuÃ¡ntiliza adaptado a datos con censura intervalar. Para identificar que el modelo propuesto es adecuado, aplicaremos la regresiÃ³n en dos conjuntos de datos: uno simulado y otro real. La base de datos a utilizar serÃ¡ la Encuesta Nacional de SatisfacciÃ³n de Usuarios en Salud elaborada por el Instituto Nacional de EstadÃ­stica e InformÃ¡tica el aÃ±o 2015. Los objetivos especÃ­ficos de la tesis son los siguientes:
 \begin{itemize}
-	\item Revisar literatura académica relacionada a las propuestas de modelos de regresión con datos censurados intervalarmente.
-	\item Identificar una estructura apropiada de la distribución Weibull para el modelo de regresión cuantílica vía una reparametrización del modelo. Posteriormente, estudiar el comportamiento de dicha estructura.
-	\item Estimar los parámetros del modelo propuesto bajo inferencia clásica.
-	\item Implementar el método de estimación para el modelo propuesto en el lenguaje R y aplicarlo en datos simulados.
-	\item Aplicar el modelo propuesto en datos de la Encuesta Nacional de Satisfacción de Usuarios en Salud.
+	\item Revisar la literatura acadÃ©mica relacionada a las propuestas de modelos de regresiÃ³n con datos censurados intervalarmente.
+	\item Identificar una estructura apropiada de la distribuciÃ³n Weibull para el modelo de regresiÃ³n cuantÃ­lica vÃ­a una reparametrizaciÃ³n del modelo.
+	\item Estimar los parÃ¡metros del modelo propuesto bajo inferencia clÃ¡sica.
+	\item Implementar el mÃ©todo de estimaciÃ³n para el modelo propuesto en el lenguaje R y realizar un estudio de simulaciÃ³n
+	\item Aplicar el modelo propuesto a datos de la Encuesta Nacional de SatisfacciÃ³n de Usuarios en Salud.
 \end{itemize}
 
-\section{Organización del Trabajo}
+\section{OrganizaciÃ³n del Trabajo}
 
-En el capítulo 2, se presenta una estructura de la distribución Weibull, apropiada para los datos con censura intervalar. Por ello, se realiza una parametrización alternativa y se estudia los 
+En el capÃ­tulo 2, se presenta una estructura de la distribuciÃ³n Weibull, apropiada para los datos con censura intervalar. Por ello, se realiza una parametrizaciÃ³n alternativa y se estudia los 
 
-En el capítulo 3, se propone el modelo de regresión con datos censurados intervalarmente.
+En el capÃ­tulo 3, se propone el modelo de regresiÃ³n con datos censurados intervalarmente.
 
-En el capítulo 4, se presenta la aplicación del modelo propuesto para determinar si existe diferencia entre los sueldos de enfermeras y enfermeros a lo largo de todos los cuantiles. Ello se realiza mediante inferencia clásica.
+En el capÃ­tulo 4, se presenta la aplicaciÃ³n del modelo propuesto para determinar si existe diferencia entre los sueldos de enfermeras y enfermeros a lo largo de todos los cuantiles. Ello se realiza mediante inferencia clÃ¡sica.
 
-Finalmente, en el capítulo 5 se presentan las principales conclusiones obtenidas en la presente tesis así como los próximos pasos.
+Finalmente, en el capÃ­tulo 5 se presentan las principales conclusiones obtenidas en la presente tesis asÃ­ como los prÃ³ximos pasos.
