--- a/01_document/bibliografia.bib
+++ b/01_document/bibliografia.bib
@@ -45,6 +45,22 @@
    year            = {1978}
  }
 
+ @article{koenker:2001,
+   author          = {Koenker, Roger and Hallock, Kevin},
+   title           = {Quantile Regression},
+   journal         = {Journal of Economic Perspectives},
+   volume          = {15},
+   number          = {4},
+   year            = {2001}
+ }
+
+@article{zhou:x,
+  author          = {Zhou, Xiuqing and Feng, Yanqin and Du, Xiuli},
+  title           = {Quantile Regression for Interval Censored Data},
+  journal         = {Communications in Statistics - Theory and Methods},
+  year            = {2016}
+}
+
 @article{peto:p,
   author          = {Peto, Richard},
   title           = {Experimental Survival Curves for Interval-censored Data},
@@ -68,4 +84,14 @@
   title           = {A Statistical Distribution Funcion of Wide Applicability},
   journal         = {Applied Mechanics Division},
   year            = {1951}
+}
+
+@
+
+@book{casella:berg,
+  author         = {Casella, George and Berger, Roger L.},
+  editor         = {Cengage Learning},
+  title          = {Statistical Inference},
+  publisher      = {Wadsworth},
+  year           = {2002}
 }
