--- a/01_document/01_introduccion/cap-introduccion.tex
+++ b/01_document/01_introduccion/cap-introduccion.tex
@@ -1,30 +1,30 @@
-\chapter{Introducci√≥n}
-Por distintas razones, los datos recabados en una investigaci√≥n de √≠ndole estad√≠stica carecen de precisi√≥n: existen discrepancias entre el valor real del objeto de medici√≥n y el valor obtenido. Este proceso puede ser sist√©mico: durante la administraci√≥n de cuestionarios a una poblaci√≥n objetivo, el encuestado puede omitir, reh√∫sar o incluso responder incorrectamente preguntas embarazosas o invasivas. Este dilema es conocido entre los encuestadores: sus encuestados, si bien est√°n dispuestos a ofrecer la mejor ayuda posible, no est√°n dispuestos a ofrecer informaci√≥n que posteriormente les pueda comprometer. Para obtener dichos datos, el encuestador usa todo su ingenio para equilibrar la privacidad del encuestado y los objetivos de su investigaci√≥n. En un esfuerzo de aminorar el estr√©s del encuestado, el encuestador puede censurar los datos con el fin de obtener una respuesta.
+\chapter{IntroducciÛn}
+Por distintas razones, los datos recabados en una investigaciÛn de Ìndole estadÌstica carecen de precisiÛn: existen discrepancias entre el valor real del objeto de mediciÛn y el valor obtenido. Este proceso puede ser sistÈmico: durante la administraciÛn de cuestionarios a una poblaciÛn objetivo, el encuestado puede omitir, reh˙sar o incluso responder incorrectamente preguntas embarazosas o invasivas. Este dilema es conocido entre los encuestadores: sus encuestados, si bien est·n dispuestos a ofrecer la mejor ayuda posible, no est·n dispuestos a ofrecer informaciÛn que posteriormente les pueda comprometer. Para obtener dichos datos, el encuestador usa todo su ingenio para equilibrar la privacidad del encuestado y los objetivos de su investigaciÛn. En un esfuerzo de aminorar el estrÈs del encuestado, el encuestador puede censurar los datos con el fin de obtener una respuesta.
 
-Dicho tipo de datos se les denomina \textit{datos censurados}, y han sido estudiados previamente en la literatura acad√©mica. Formalmente, y siguiendo las ideas plasmadas por \cite{peto:p}, una variable $C$ se le denota censurada cuando su valor $c$ no es del todo observable y la √∫nica informaci√≥n sobre la misma es un intervalo no-cero $I$. Esta construcci√≥n permite definir tres tipos de datos censurados: datos censurados \textit{hacia la izquierda} (en d√≥nde el intervalo $I$ se define de la forma $[-\infty,L_i]$), datos censurados \textit{intervalares} (definido de la forma $[L_i, L_f]; L_i < L_f$), datos censurados \textit{hacia la derecha} (definido de la forma $[L_f, \infty]$). 
+Dicho tipo de datos se les denomina \textit{datos censurados}, y han sido estudiados previamente en la literatura acadÈmica. Formalmente, y siguiendo las ideas plasmadas por \cite{peto:p}, una variable $C$ se le denota censurada cuando su valor $c$ no es del todo observable y la ˙nica informaciÛn sobre la misma es un intervalo no-cero $I$. Esta construcciÛn permite definir tres tipos de datos censurados: datos censurados \textit{hacia la izquierda} (en dÛnde el intervalo $I$ se define de la forma $[-\infty,L_i]$), datos censurados \textit{intervalares} (definido de la forma $[L_i, L_f]; L_i < L_f$), datos censurados \textit{hacia la derecha} (definido de la forma $[L_f, \infty]$). 
 
-Este tipo de datos naturalmente generan retos en el proceso de modelamiento, pues los modelos est√°ndares de regresi√≥n presumen que la variable respuesta es directamente observable. Situaciones como la precisada en el parr√°fo precedente han sido exploradas previamente: desde la determinaci√≥n de la verosimilitud, la elaboraci√≥n de modelos de regresi√≥n y su estimaci√≥n bajo inferencia cl√°sica y bayesiana. \cite{gentleman:lmk} identificaron un m√©todo de m√°xima verosimilitud para este tipo de datos, asegurando su consistencia estad√≠stica e identificando m√©todos algor√≠tmicos para su c√≥mputo. Utilizado los puntos extremos del intervalo, $L_i$ y $L_f$, era posible identificar la m√°xima veros√≠militud a trav√©s de la diferencia de las funciones de distribuci√≥n acumulada en dichos puntos. Tomando en consideraci√≥n dicho m√©todo de estimaci√≥n distintos autores propusieron modelos de regresi√≥n param√©tricos bajo inferencia cl√°sica y bayesiana, tales como \cite{mun:xu}, quienes identificaron modelos param√©tricos de supervivencia para este tipo de datos.
+Este tipo de datos naturalmente generan retos en el proceso de modelamiento, pues los modelos est·ndares de regresiÛn presumen que la variable respuesta es directamente observable. Situaciones como la precisada en el parr·fo precedente han sido exploradas previamente: desde la determinaciÛn de la verosimilitud, la elaboraciÛn de modelos de regresiÛn y su estimaciÛn bajo inferencia cl·sica y bayesiana. \cite{gentleman:lmk} identificaron un mÈtodo de m·xima verosimilitud para este tipo de datos, asegurando su consistencia estadÌstica e identificando mÈtodos algorÌtmicos para su cÛmputo. Utilizado los puntos extremos del intervalo, $L_i$ y $L_f$, era posible identificar la m·xima verosÌmilitud a travÈs de la diferencia de las funciones de distribuciÛn acumulada en dichos puntos. Tomando en consideraciÛn dicho mÈtodo de estimaciÛn distintos autores propusieron modelos de regresiÛn paramÈtricos bajo inferencia cl·sica y bayesiana, tales como \cite{mun:xu}, quienes identificaron modelos paramÈtricos de supervivencia para este tipo de datos.
 
-Los modelos anteriormente expuestos tienen como prop√≥sito modelar el valor esperado due la variable respuesta condicionada por un conjunto de variables, no obstante el investigador puede tener como objetivo identificar los factores subyacentes que impactan a distintos cuantiles de la variable respuesta. Por ejemplo, los factores (y el efecto de los mismos) que modelen a una persona con un gran sueldo pueden ser muy distintos a una persona con un sueldo promedio o bajo. Bajo este contexto, \cite{koenker:kk} propuso un modelo que extiende esta idea a la estimaci√≥n de modelos en los que los cuantiles de la distribuci√≥n condicional de la variable respuesta son expresadas como funciones de un conjunto de covariables (\cite{koenker:2001}). Posteriormente, \cite{zhou:x} propone un m√©todo de estimaci√≥n para datos con censura intervalar y establece las propiedades asint√≥ticas de los estimadores.
+Los modelos anteriormente expuestos tienen como propÛsito modelar el valor esperado due la variable respuesta condicionada por un conjunto de variables, no obstante el investigador puede tener como objetivo identificar los factores subyacentes que impactan a distintos cuantiles de la variable respuesta. Por ejemplo, los factores (y el efecto de los mismos) que modelen a una persona con un gran sueldo pueden ser muy distintos a una persona con un sueldo promedio o bajo. Bajo este contexto, \cite{koenker:kk} propuso un modelo que extiende esta idea a la estimaciÛn de modelos en los que los cuantiles de la distribuciÛn condicional de la variable respuesta son expresadas como funciones de un conjunto de covariables (\cite{koenker:2001}). Posteriormente, \cite{zhou:x} propone un mÈtodo de estimaciÛn para datos con censura intervalar y establece las propiedades asintÛticas de los estimadores.
 
-La presente tesis propone utilizar los temas y modelos anteriormente expuestos para implementar un modelo param√©trico de regresi√≥n cuant√≠lica aplicado a datos con censura intervalar. Para efectos de la aplicaci√≥n, los datos se modelar√°n bajo una distribuci√≥n Weibull, la cual es de amplia aplicabilidad y permite modelar colas pesadas. Con el prop√≥sito de implementar la regresi√≥n cuant√≠lica y, atendiendo a la estructura de los datos, dicha distribuci√≥n ser√° reparametrizada. Finalmente, el m√©todo de estimaci√≥n ser√° el de m√°xima verosimilitud, siguiendo el marco de la inferencia cl√°sica.
+La presente tesis propone utilizar los temas y modelos anteriormente expuestos para implementar un modelo paramÈtrico de regresiÛn cuantÌlica aplicado a datos con censura intervalar. Para efectos de la aplicaciÛn, los datos se modelar·n bajo una distribuciÛn Weibull, la cual es de amplia aplicabilidad y permite modelar colas pesadas. Con el propÛsito de implementar la regresiÛn cuantÌlica y, atendiendo a la estructura de los datos, dicha distribuciÛn ser· reparametrizada. Finalmente, el mÈtodo de estimaciÛn ser· el de m·xima verosimilitud, siguiendo el marco de la inferencia cl·sica.
 
 \section{Objetivos}
-El objetivo de la tesis consiste en proponer un modelo de regresi√≥n cu√°ntiliza adaptado a datos con censura intervalar. Para identificar que el modelo propuesto es adecuado, aplicaremos la regresi√≥n en dos conjuntos de datos: uno simulado y otro real. La base de datos a utilizar ser√° la Encuesta Nacional de Satisfacci√≥n de Usuarios en Salud elaborada por el Instituto Nacional de Estad√≠stica e Inform√°tica el a√±o 2015. Los objetivos espec√≠ficos de la tesis son los siguientes:
+El objetivo de la tesis consiste en proponer un modelo de regresiÛn cu·ntiliza adaptado a datos con censura intervalar. Para identificar que el modelo propuesto es adecuado, aplicaremos la regresiÛn en dos conjuntos de datos: uno simulado y otro real. La base de datos a utilizar ser· la Encuesta Nacional de SatisfacciÛn de Usuarios en Salud elaborada por el Instituto Nacional de EstadÌstica e Inform·tica el aÒo 2015. Los objetivos especÌficos de la tesis son los siguientes:
 \begin{itemize}
-	\item Revisar la literatura acad√©mica relacionada a las propuestas de modelos de regresi√≥n con datos censurados intervalarmente.
-	\item Identificar una estructura apropiada de la distribuci√≥n Weibull para el modelo de regresi√≥n cuant√≠lica v√≠a una reparametrizaci√≥n del modelo.
-	\item Estimar los par√°metros del modelo propuesto bajo inferencia cl√°sica.
-	\item Implementar el m√©todo de estimaci√≥n para el modelo propuesto en el lenguaje R y realizar un estudio de simulaci√≥n
-	\item Aplicar el modelo propuesto a datos de la Encuesta Nacional de Satisfacci√≥n de Usuarios en Salud.
+	\item Revisar la literatura acadÈmica relacionada a las propuestas de modelos de regresiÛn con datos censurados intervalarmente.
+	\item Identificar una estructura apropiada de la distribuciÛn Weibull para el modelo de regresiÛn cuantÌlica vÌa una reparametrizaciÛn del modelo.
+	\item Estimar los par·metros del modelo propuesto bajo inferencia cl·sica.
+	\item Implementar el mÈtodo de estimaciÛn para el modelo propuesto en el lenguaje R y realizar un estudio de simulaciÛn
+	\item Aplicar el modelo propuesto a datos de la Encuesta Nacional de SatisfacciÛn de Usuarios en Salud.
 \end{itemize}
 
-\section{Organizaci√≥n del Trabajo}
+\section{OrganizaciÛn del Trabajo}
 
-En el cap√≠tulo 2, se presenta una estructura de la distribuci√≥n Weibull, apropiada para los datos con censura intervalar. Por ello, se realiza una parametrizaci√≥n alternativa y se estudia los 
+En el capÌtulo 2, se presenta una estructura de la distribuciÛn Weibull, apropiada para los datos con censura intervalar. Por ello, se realiza una parametrizaciÛn alternativa y se estudia los 
 
-En el cap√≠tulo 3, se propone el modelo de regresi√≥n con datos censurados intervalarmente.
+En el capÌtulo 3, se propone el modelo de regresiÛn con datos censurados intervalarmente.
 
-En el cap√≠tulo 4, se presenta la aplicaci√≥n del modelo propuesto para determinar si existe diferencia entre los sueldos de enfermeras y enfermeros a lo largo de todos los cuantiles. Ello se realiza mediante inferencia cl√°sica.
+En el capÌtulo 4, se presenta la aplicaciÛn del modelo propuesto para determinar si existe diferencia entre los sueldos de enfermeras y enfermeros a lo largo de todos los cuantiles. Ello se realiza mediante inferencia cl·sica.
 
-Finalmente, en el cap√≠tulo 5 se presentan las principales conclusiones obtenidas en la presente tesis as√≠ como los pr√≥ximos pasos.
+Finalmente, en el capÌtulo 5 se presentan las principales conclusiones obtenidas en la presente tesis asÌ como los prÛximos pasos.
